fix spacing of right-content section

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@
     padding: 20px;
     background-color: pink;
 }
-.projects {
+.projects, .right-content {
     padding: 10px;
     background-color: gray;
 }
@@ -144,9 +144,7 @@
     justify-self: end;
 }
 
-.announcements {
-    padding: 10px;
-}
+
 
 .sections {
     background-color: white;
@@ -175,6 +173,7 @@
     background-color: white;
     border-radius: 10px;
     padding: 10px 20px;
+    margin-bottom: 40px;
     display: grid;
     grid-template: repeat(3, 1fr) / 1fr;
 }
